--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Evan Ditter"
 author: "Evan Ditter"
-description: "Evan Ditter"style=\"color: #f45;\">&lt;3</b>"
+description: "Evan Ditter"
 permalink: /:title/
 lang: "en"
 excerpt_separator: "\n\n\n"
