--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {file: "evan.pdf", title: "CV/Resume"}
+  - {url: "https://github.com/evandttr/evandttr.github.io/blob/master/evan.pdf", title: "CV/Resume"}
   - {file: "README.md"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
