--- a/_config.yml
+++ b/_config.yml
@@ -16,8 +16,9 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
-  - {url: "https://github.com/evandttr/evandttr.github.io/blob/master/evan.pdf", title: "CV/Resume"}
+  - {file: "evan.pdf", title: "CV/Resume"}
   - {file: "README.md"}
+  - {file: "digital.md", title: "Digital Humanities Projects"
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:editter@princeton.edu"}
