--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ minimal: false             # use a dark header
 navigation:                # accepts {file, title, url, icon, sidebaricon}
   - {file: "evan.pdf", title: "CV/Resume"}
   - {file: "README.md"}
-  - {file: "digital.md", title: "Digital Humanities Projects"
+  - {file: "digital.md", title: "Digital Humanities Projects"}
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:editter@princeton.edu"}
