--- a/_config.yml
+++ b/_config.yml
@@ -16,6 +16,7 @@ minimal: false             # use a dark header
 # Menu
 
 navigation:                # accepts {file, title, url, icon, sidebaricon}
+ primary: 
   - title: Main Menu
     subfolderitems:
       - name: "Home"
