--- a/_config.yml
+++ b/_config.yml
@@ -13,50 +13,26 @@ show_frame: true           # adds a gray frame to the site
 show_sidebar: false        # show a sidebar instead of the usual header
 minimal: false             # use a dark header
 
-# Menu
-
-navigation:                # accepts {file, title, url, icon, sidebaricon}
- primary: 
-  - title: Main Menu
-    subfolderitems:
-      - name: "Home"
-        url: "../"
-        weight: 2
-      - name: "Pages"
-        url: "#"
-        weight: 3
-        subsubfolderitems:
-          - name: "About"
-            url: "/about/"
-            weight: 2
-          - name: "Pricing"
-            url: "/pricing/"
-            weight: 2
-          - name: "Faq's"
-            url: "/faq/"
-            weight: 2
-          - name: "Contact"
-            url: "/contact/"
-            weight: 2
-          - name: "Testimonial"
-            url: "/testimonial/"
-            weight: 2
-          - name: "404"
-            url: "/404/"
-            weight: 2
-      - name: "Blog"
-        url: "#"
-        weight: 3
-        subsubfolderitems:
-          - name: "Blog Listing"
-            url: "/blog/"
-            weight: 2
-          - name: "Blog Single"
-            url: "/adum-software-industry-how-achive-the-goal/"
-            weight: 2
-      - name: "Contact"
-        url: "/contact/"
-        weight: 2
+# Menu  # accepts {file, title, url, icon, sidebaricon}
+navigation:               
+- title: About
+  url: /about.html
+- title: Team
+  url: /team.html
+- title: Contact
+  url: /contact.html
+- title: Store
+  url: /store.html
+- title: Support
+  url: /support.html
+  sublinks:
+    - title: FAQ
+      url: /faq.html
+    - title: Documentation
+      url: /documentation.html
+    - title: separator
+    - title: Customer Support
+      url: /customer-support.html
 
 external:                  # shows a footer with social links - for available icons see fontawesome.com/icons
   - {title: Mail, icon: envelope, url: "mailto:editter@princeton.edu"}
